# shotdetect

./: AUTHORS  INSTALL.Ubuntu.12.04  Makefile.am  Makefile.in  NEWS  README  README.md  config.h.in  configure  configure.in
include/: conf.h  film.h  graph.h  image.h  shot.h  xml.h
src/: Makefile  Makefile.am  Makefile.in  film.cpp  graph.cpp  image.cpp  main.cpp  shot.cpp  xml.cpp
