# $Id: configure.in 159 2007-04-06 17:27:14Z johmathe $
# $Date: 2007-04-06 19:27:14 +0200 (Fri, 06 Apr 2007) $

AC_PREREQ(2.59)
AC_INIT(README.shotdetect)
AM_INIT_AUTOMAKE([shotdetect], 1.0.86)
AM_CONFIG_HEADER(config.h)

AC_PROG_INSTALL
# Checks for programs.
AC_PROG_CXX
AC_PROG_CC


dnl Check for libxml2

AC_DEFUN([VERSION_TO_NUMBER],
[`$1 | sed -e 's/libxml //' | awk 'BEGIN { FS = "."; } { printf "%d", ([$]1 * 1000 + [$]2) * 1000 + [$]3;}'`])


LIBXML_CONFIG_PREFIX=""

AC_ARG_WITH(libxml-prefix,
        [  --with-libxml-prefix=[PFX]           Specify location of libxml config],
        LIBXML_CONFIG_PREFIX=$withval
)

AC_ARG_WITH(libxml-include-prefix,
        [  --with-libxml-include-prefix=[PFX]   Specify location of libxml headers],
        LIBXML_CFLAGS="-I$withval"
)

AC_ARG_WITH(libxml-libs-prefix,
        [  --with-libxml-libs-prefix=[PFX]      Specify location of libxml libs],
        LIBXML_LIBS="-L$withval"
)

AC_SUBST(LIBXML_SRC)




AC_SUBST(LIBXML_REQUIRED_VERSION)
AC_MSG_CHECKING(for libxml libraries >= $LIBXML_REQUIRED_VERSION)
if test "x$LIBXML_CONFIG_PREFIX" != "x"
then
        XML_CONFIG=${LIBXML_CONFIG_PREFIX}/bin/xml2-config
else
        XML_CONFIG=xml2-config
fi



if ${XML_CONFIG} --libs print > /dev/null 2>&1
then
        XMLVERS=`$XML_CONFIG --version`
        if test VERSION_TO_NUMBER(echo $XMLVERS) -ge VERSION_TO_NUMBER(echo $LIBXML_REQUIRED_VERSION)
        then
                LIBXML_LIBS="$LIBXML_LIBS `$XML_CONFIG --libs`"
                LIBXML_CFLAGS="$LIBXML_CFLAGS `$XML_CONFIG --cflags`"
                AC_MSG_RESULT($XMLVERS found)
        else
                AC_MSG_ERROR(Version $XMLVERS found. You need at least libxml2 $LIBXML_REQUIRED_VERSION for this version of libxslt)
        fi
else
        AC_MSG_ERROR([Could not find libxml2 anywhere, check ftp://xmlsoft.org/.])
fi


for i in /usr/local /usr; do
   if test -x "$i/bin/xslt-config"; then
    XSLT_CONFIG=$i/bin/xslt-config
     break
   fi
done

if test -z "$XSLT_CONFIG"; then
   AC_MSG_ERROR([xslt-config not found. Please reinstall the libxslt >= 1.1.0 distribution])
fi
# Checks for libraries.
# FIXME: Replace `main' with a function in `-lavcodec':
AC_CHECK_LIB(stdc++, main,,AC_MSG_ERROR(shotdetect requires libstdc++))
AC_CHECK_LIB([avcodec], [main],,  AC_MSG_ERROR([Please install libavcodec]))
# FIXME: Replace `main' with a function in `-lavutil':
AC_CHECK_LIB([avutil], [main],,  AC_MSG_ERROR([Please install libavutil]))
# FIXME: Replace `main' with a function in `-lavformat':
AC_CHECK_LIB([avformat], [main],,  AC_MSG_ERROR([Please install libavformat]))
# FIXME: Replace `main' with a function in `-lavutil':
AC_CHECK_LIB([avutil], [main],,  AC_MSG_ERROR([Please install libavutil]))
# FIXME: Replace `main' with a function in `-lswscale':
AC_CHECK_LIB([swscale], [main],,  AC_MSG_ERROR([Please install libswscale]))
# FIXME: Replace `main' with a function in `-lxvidcore':
AC_CHECK_LIB([xvidcore], [main],,  AC_MSG_ERROR([Please install libxvidcore]))
# FIXME: Replace `main' with a function in `-lmp3lame':
AC_CHECK_LIB([mp3lame], [main],,  AC_MSG_ERROR([Please install liblame]))
# FIXME: Replace `main' with a function in `-lfaac':
AC_CHECK_LIB([faac], [main],,  AC_MSG_ERROR([Please install libfaac]))
# FIXME: Replace `main' with a function in `-lpthread':
AC_CHECK_LIB([pthread], [main],,  AC_MSG_ERROR([Please install libpthread]))
# FIXME: Replace `main' with a function in `-lgd':
AC_CHECK_LIB([gd], [main],,  AC_MSG_ERROR([Please install libgd2 !]))
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_HEADER_TIME

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_STAT
AC_CHECK_FUNCS([gettimeofday mkdir strcspn strspn])

AC_OUTPUT(Makefile src/Makefile)
